--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/AddEditExSitu.cshtml
@@ -1278,7 +1278,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card-header text-small">“Programa de Traslocación de Especímenes</div>
+                                    <div class="card-header text-small">Programa de Traslocación de Especímenes</div>
                                     <div class="card-body">
                                         <div class="form-row">
                                             <div class="form-group col-md-2">
