En atención del Ticket #032664

--- a/SIGOFCv3/Areas/General/Views/Controles/_Ubigeo.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Controles/_Ubigeo.cshtml
@@ -6,7 +6,7 @@
 
 <script src="~/Areas/General/js/Controles/_Ubigeo.js"></script>
 
-<div class="modal-dialog" role="document">
+<div class="modal-dialog" role="document" id="ubigeoModalDialogZIndex">
     <div class="modal-content">
         <div class="modal-header text-small" style="cursor:move;">
             Seleccione el Ubigeo
