--- a/SIGOFCv3/Areas/General/Views/Especies/Index.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Especies/Index.cshtml
@@ -98,7 +98,7 @@
                             <input class="form-control form-control-sm" id="txtNomComun" type="text">
                         </div>
                         <div class="form-group col-md-5">
-                            @Html.Partial("~/Areas/General/Views/Controles/_renderComboEspecie.cshtml")
+                            @Html.Partial("~/Areas/General/Views/Controles/_renderComboEspecie.cshtml","")
                             @*<label for="cboNomCientificoN">Especie Sinónimo</label>
                                 <select class="form-control form-control-sm" id="cboNomCientificoN">
                                     @foreach (var item in ViewBag.ListNEspecies)
