Ocultar campo especialista control calidad duplicado.

--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/AddEdit.cshtml
@@ -194,7 +194,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-row">
+                                        <div class="form-row" style="display: none;">
                                             <div class="col-md-12">
                                                 @Html.Partial("~/Areas/Supervision/Views/ManInforme/Render/_renderSupervisorCalidad.cshtml", new CapaEntidad.ViewModel.VM_SupervisorCalidad() { hdSupervisor_Calidad = Model.hdSupervisor_Calidad, Nombre_Supervisor_Calidad = Model.Nombre_Supervisor_Calidad })
                                             </div>
