REQ-354, Se optimiza la consulta y la descarga de archivos relacionados al universo capacitable, se agrega la importacion de datos desde la plantilla excel se agregan los criterios para el consolidado se agregan las plantillas

--- a/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/IndexConsolidado.cshtml
+++ b/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/IndexConsolidado.cshtml
@@ -65,6 +65,22 @@
 
     }
 
+    _rendReporteConsolidadoPDC.fnExport = function () {
+        var url = urlLocalSigo + "CAPACITACION/ManPDC/DescargarUniverso";
+
+        let option = { url: url, datos: "", type: 'POST' };
+        utilSigo.fnAjax(option, function (data) {
+            if (data.success) {
+                document.location = urlLocalSigo + "Archivos/Plantilla/" + data.msj;
+            }
+            else {
+                utilSigo.toastWarning("Aviso", "Sucedio un error, Comuníquese con el Administrador");
+                console.log(data.msj);
+            }
+        });
+    }
+
+
     $(document).ready(function () {
         _rendReporteConsolidadoPDC.frm = $("#divReporteConsolidadoPDC");
         _rendReporteConsolidadoPDC.fnReporte();
