--- a/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/_renderResumen.cshtml
+++ b/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/_renderResumen.cshtml
@@ -58,8 +58,16 @@
     </table>
 
     <br />
+    Criterios para la priorizacion
     <ol>
-        <li>criterios ...</li>
+        <li>PASPEQ (3 PUNTOS)</li>
+        <li>SSE (1 punto)</li>
+        <li>PEI Riesgo (TH que representan riesgo para el comercio legal) </li>
+        <li>PEI CCNN y CCCC (TH en CCNN o CCCC buscar por Modalidad) (2 puntos)</li>
+        <li>Mecanismos conservación (1 punto) </li>
+        <li> Mecanismo de restauración >= 2UIT (1 punto)</li>
     </ol>
+
+    Nota: se considera capcitable si la suma de los criterios es > 6
     <br />
 </div>
