--- a/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/IndexPDC.cshtml
+++ b/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/IndexPDC.cshtml
@@ -53,7 +53,9 @@
                 data: { 'oficinas': modalidades, 'departamento': departamentos, 'titulo': titulo, 'titular': titular },
                 success: function (data) {
                     $('div#divReportePDC').html(data);
-
+                    $('#collapseExample').collapse({
+                        toggle: false
+                    })
                 }
             });
         }
@@ -69,10 +71,12 @@
             }
         }
     }
-    _rendReporteUPDC.fnExportDetalle = function () {
-        var url = urlLocalSigo + "CAPACITACION/ManPDC/DescargarUniversoPDC";
-        var option = { url: url, datos: JSON.stringify({}), type: 'POST' };
+  
 
+    _rendReporteUPDC.fnExport = function () {
+        var url = urlLocalSigo + "CAPACITACION/ManPDC/DescargarUniverso";
+
+        let option = { url: url, datos: "", type: 'POST' };
         utilSigo.fnAjax(option, function (data) {
             if (data.success) {
                 document.location = urlLocalSigo + "Archivos/Plantilla/" + data.msj;
@@ -83,6 +87,7 @@
             }
         });
     }
+
 
     $(document).ready(function () {
         _rendReporteUPDC.frm = $("#divReporteUniversoPDC");
@@ -97,58 +102,58 @@
             <h5>Reporte Universo Capacitable para el PDC</h5>
         </div>
         <div class="card-body">
-            <div class="row">
-                <div class="col-sm-12">
-                    <a class="btn btn-outline-success" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Opciones de busqueda
-                    </a>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6>Titulo Habilitante</h6>
-                                    <div class="form-group  has-success" style="text-align:left !important">
-                                        <div class="col-sm-10">
-                                            <input id="titulo" class="form-control" value="" />
-                                        </div>
-                                    </div>
-                                    <hr />
-                                    <h6>Titular</h6>
-                                    <div class="form-group  has-success" style="text-align:left !important">
-                                        <div class="col-sm-10">
-                                            <input id="titular" class="form-control" value="" />
-                                        </div>
+            <div class="col-sm-12">
+                <a class="btn btn-outline-success" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    Opciones de busqueda
+                </a>
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6>Titulo Habilitante</h6>
+                                <div class="form-group  has-success" style="text-align:left !important">
+                                    <div class="col-sm-10">
+                                        <input id="titulo" class="form-control" value="" />
                                     </div>
                                 </div>
-                                <div class="col-sm-3">
-                                    <h6>Oficina Desconcentrada</h6>
-                                    <ul>
-                                        <li>
-                                            <div class="checkbox">
-                                                <label>
-                                                    <input type="checkbox" class="check" value="00" id="chkTodoOD">
-                                                    Todas las OD
-                                                </label>
-                                            </div>
-                                        </li>
-                                        <div id="chkOD">
-                                            @if (Model.lstChkOd != null)
-                                            {
-                                                foreach (var item in Model.lstChkOd)
-                                                {
-                                                <li>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" class="check" value="@item.Text">
-                                                            @item.Text
-                                                        </label>
-                                                    </div>
-                                                </li>
-                                            }
-                                        }
+                                <hr />
+                                <h6>Titular</h6>
+                                <div class="form-group  has-success" style="text-align:left !important">
+                                    <div class="col-sm-10">
+                                        <input id="titular" class="form-control" value="" />
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-3">
+                                <h6>Oficina Desconcentrada</h6>
+                                <ul>
+                                    <li>
+                                        <div class="checkbox">
+                                            <label>
+                                                <input type="checkbox" class="check" value="00" id="chkTodoOD">
+                                                Todas las OD
+                                            </label>
+                                        </div>
+                                    </li>
+                                    <div id="chkOD">
+                                        @if (Model.lstChkOd != null)
+                                        {
+                                            foreach (var item in Model.lstChkOd)
+                                            {
+                                            <li>
+                                                <div class="checkbox">
+                                                    <label>
+                                                        <input type="checkbox" class="check" value="@item.Text">
+                                                        @item.Text
+                                                    </label>
+                                                </div>
+                                            </li>
+                                        }
+                                    }
                                     </ul>
                                 </div>
+
                                 <div class="col-sm-3">
                                     <h6>Departamento</h6>
                                     <ul>
@@ -175,22 +180,24 @@
                                                 </li>
                                             }
                                         }
+                                        </ul>
                                     </div>
-                                    </ul>
-                                </div>
 
+                                    <div class="col-sm-3">
+                                        <button id="btnBuscarPDC" class="btn btn-info" style="float: right" onclick="_rendReporteUPDC.fnReporte()">
+                                            <i class="fa fa-search"></i>&nbsp;&nbsp;Generar reporte
+                                        </button>
+                                    </div>
+
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-sm-3">
-                            <button id="btnBuscarPDC" class="btn btn-info" style="float: right" onclick="_rendReporteUPDC.fnReporte()">
-                                <i class="fa fa-search"></i>&nbsp;&nbsp;Generar reporte
-                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div><hr /></div>
             <div id="divReportePDC">
 
             </div>
         </div>
+
+
