correccion en la importacion de archivos

--- a/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/IndexImport.cshtml
+++ b/SIGOFCv3/Areas/Capacitacion/Views/ManPDC/IndexImport.cshtml
@@ -98,7 +98,7 @@
                 <div class="form-group">
                     <fieldset>
                         <a href="@Url.Content("~/Archivos/Plantilla/import_paspeq_plantilla.xlsx")" type="button">
-                            <i class="fa fa-cloud-download"></i>&nbsp; Descargar Plantilla Especies
+                            <i class="fa fa-cloud-download"></i>&nbsp; Descargar Plantilla PASPEQ
                         </a> &nbsp;
                         <label style="cursor:pointer;" class="fa mx-2 fa-lg fa-file-excel-o" title="Importar Archivo" data-toggle="tooltip">
                             <input type="file" id="fileselect" name="fileselect" style="display:none" size="60"
